add support for ExternalServiceIdentifier
